src/objects/Survey_Question__c.object
<CustomObject>
    <description>Survey Force object</description>
<!--    <fields>-->
<!--        <fullName>Choices__c</fullName>-->
<!--        <externalId>false</externalId>-->
<!--        <inlineHelpText>Possible answers to the question</inlineHelpText>-->
<!--        <label>Choices</label>-->
<!--        <length>1000</length>-->
<!--        <trackTrending>false</trackTrending>-->
<!--        <type>LongTextArea</type>-->
<!--        <visibleLines>5</visibleLines>-->
<!--    </fields>-->
    <fields>
        <fullName>Hide_on_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to hide this question on a survey. Useful if you want to replace a single question without losing old question data</inlineHelpText>
        <label>Hide on Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <description>Field to specify in which position the question is in the survey.</description>
        <inlineHelpText>Enter the position of the question within the survey here.</inlineHelpText>
        <label>OrderNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
<!--    <fields>-->
<!--        <fullName>Question__c</fullName>-->
<!--        <description>This is the main question. Future feature: Subtitle in smaller print</description>-->
<!--        <externalId>false</externalId>-->
<!--        <inlineHelpText>The question you would like answered</inlineHelpText>-->
<!--        <label>Question Title</label>-->
<!--        <required>true</required>-->
<!--        <trackTrending>false</trackTrending>-->
<!--        <type>TextArea</type>-->
<!--    </fields>-->
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the question required? Check this box if you want the taker to be required to answer the question.</description>
        <inlineHelpText>Is an answer to the question required? (default is true)</inlineHelpText>
        <label>Required Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <description>Master-Detail to enforce sharing for a survey and its questions</description>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>SurveyQuestions</relationshipLabel>
        <relationshipName>SurveyQuestions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Responses__c</fullName>
        <label>Total Responses</label>
        <summaryForeignKey>SurveyQuestionResponse__c.Survey_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
<!--    <fields>-->
<!--        <fullName>Type__c</fullName>-->
<!--        <externalId>false</externalId>-->
<!--        <label>Type</label>-->
<!--        <required>true</required>-->
<!--        <trackTrending>false</trackTrending>-->
<!--        <type>Picklist</type>-->
<!--        <valueSet>-->
<!--            <restricted>true</restricted>-->
<!--            <valueSetDefinition>-->
<!--                <sorted>false</sorted>-->
<!--                <value>-->
<!--                    <fullName>Single Select&#45;&#45;Vertical</fullName>-->
<!--                    <default>true</default>-->
<!--                    <label>Single Select&#45;&#45;Vertical</label>-->
<!--                </value>-->
<!--                <value>-->
<!--                    <fullName>Single Select&#45;&#45;Horizontal</fullName>-->
<!--                    <default>false</default>-->
<!--                    <label>Single Select&#45;&#45;Horizontal</label>-->
<!--                </value>-->
<!--                <value>-->
<!--                    <fullName>Multi-Select&#45;&#45;Vertical</fullName>-->
<!--                    <default>false</default>-->
<!--                    <label>Multi-Select&#45;&#45;Vertical</label>-->
<!--                </value>-->
<!--                <value>-->
<!--                    <fullName>Free Text</fullName>-->
<!--                    <default>false</default>-->
<!--                    <label>Free Text</label>-->
<!--                </value>-->
<!--                <value>-->
<!--                    <fullName>Free Text - Single Row Visible</fullName>-->
<!--                    <default>false</default>-->
<!--                    <label>Free Text - Single Row Visible</label>-->
<!--                </value>-->
<!--                <value>-->
<!--                    <fullName>&#45;&#45;SELECT&#45;&#45;</fullName>-->
<!--                    <default>false</default>-->
<!--                    <isActive>false</isActive>-->
<!--                    <label>&#45;&#45;SELECT&#45;&#45;</label>-->
<!--                </value>-->
<!--            </valueSetDefinition>-->
<!--        </valueSet>-->
<!--    </fields>-->
    <label>Survey Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
<!--        <columns>Type__c</columns>-->
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>